<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FocusWork</string>

    <string name="nav_header_title">Focus Work</string>
    <string name="nav_header_subtitle">Team 06 - TU Graz</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_overview">Overview</string>
    <string name="menu_new_task">New Task</string>
    <string name="menu_timer">Start Task Timer</string>
    <!-- Strings related to new task fragment -->
    <string name="prompt_task_name">Task Name</string>
    <string name="prompt_task_description">Task Description</string>
    <string name="prompt_task_start_date">01.01.1970</string>
    <string name="prompt_task_start_time">00:00</string>
    <string name="task_start_date_and_time">Task Start</string>
    <string name="prompt_task_end_date">01.01.1970</string>
    <string name="prompt_task_end_time">00:00</string>
    <string name="task_end_date_and_time">Task End</string>
    <string name="action_create_task">Create Task</string>
    <string name="action_sign_in_short">Sign in</string>
    <!-- Strings related to Timer -->
    <string name="timer_format">(hh:mm)</string>
    <string name="task_not_saved_toast">Unfortunately the task could not be saved!</string>
    <!-- Strings related to Timer Fragment -->
    <string name="timer_countdown">00:00</string>
    <string name="timer_start_button">Start Timer</string>
    <string name="timer_finished">Timer has finished!</string>
    <!-- Strings related to Day Overview -->
    <string name="day_title">Tasks for Today</string>
    <string name="day_tasks_for">Tasks for:</string>
    <string name="week_title">Tasks for the Week</string>
    <string name="all_days">Entire Week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="erroneous_config">Warning! Erroneous config, defaulting to Week!</string>
    <string name="all_title">All Tasks</string>
    <!-- String related to Details Fragment -->
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="month_title">Tasks for this Month</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- Preference Titles -->
    <string name="overview_header">Overview</string>
    <string name="sounds_header">Sounds</string>
    <string name="visuals_header">Visuals</string>
    <string name="language_header">Language</string>

    <!-- Language -->
    <string name="language_title">App Language</string>

    <!-- Overview Preferences -->
    <string name="overviewTimeFrame_title">Overview time frame</string>

    <!-- Sounds Preferences -->
    <string name="notificationSound_title">Notification sound</string>

    <!-- Visual Preferences -->
    <string name="colorBackground_title">Background color</string>
    <string name="colorAccent_title">Accent color</string>

    <!-- Login and Registration -->
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="sign_in_text_view">Already have an account?</string>
    <string name="sign_up_text_view">Don\'t have an account yet?</string>
    <string name="invalid_firstname">First name cannot be empty</string>
    <string name="invalid_lastname">Last name cannot be empty</string>
    <string name="invalid_username">Not a valid email address</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="notification_title">Your task has finished!</string>
    <string name="notification_message">The task you set a timer for has finished.</string>

    <string name="login_email_hint">max.mustermann@gmail.at</string>
    <string name="logo_image_description">Logo image</string>
    <string name="focus_work_title">Focus Work</string>
    <string name="add_new_task">Add new task</string>
    <string name="startTime" tools:ignore="MissingTranslation">0:00</string>
    <string name="notification">Notification</string>
    <string name="textview_range" tools:ignore="MissingTranslation">TextView</string>
    <string name="login_error_message">"Couldn't log in user "</string>

    <string name="delete_dialog_title">Delete task</string>
    <string name="delete_dialog_description">Do you really want to delete the task?</string>
    <string name="delete_dialog_cancel">Cancel</string>
    <string name="delete_dialog_confirm_delete">Delete</string>

    <string name="title_edit_task">Edit Task</string>
    <string name="action_save_task">Save Task</string>
    <string name="save_template">Save Template</string>
    <string name="template_exists_toast">Task template already exists</string>
    <string name="menu_item_load_template">Load Template</string>
    <string name="menu_item_delete_template">Delete Template</string>

    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_description">Do you really want to logout?</string>
    <string name="logout_dialog_cancel">Cancel</string>
    <string name="logout_dialog_confirm">Confirm</string>

</resources>