<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language_header">

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/overview_header">

        <ListPreference
            app:defaultValue="week"
            app:entries="@array/overview_time_frame_entries"
            app:entryValues="@array/overview_time_frame_values"
            app:key="overviewTimeFrame"
            app:title="@string/overviewTimeFrame_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sounds_header">

        <ListPreference
            app:defaultValue="default"
            app:entries="@array/notification_sound_entries"
            app:entryValues="@array/notification_sound_values"
            app:key="notificationSound"
            app:title="@string/notificationSound_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/visuals_header">

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/color_background_entries"
            app:entryValues="@array/color_background_values"
            app:key="colorBackground"
            app:title="@string/colorBackground_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="blue"
            app:entries="@array/color_accent_entries"
            app:entryValues="@array/color_accent_values"
            app:key="colorAccent"
            app:title="@string/colorAccent_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>